# crewAmazon

amz/: README.md  crew_output.txt  organized_pdfs_report.md  pyproject.toml
amz/src/amz/: crew.py  main.py
amz/src/amz/config/: agents.yaml
amz/src/amz/tools/: pdf_downloader.py
src/crewai/project/config/: tasks.yaml
